--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1>My Practice Repo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus id neque debitis tempora vel laborum est. Aut excepturi tempora modi provident quod maiores, ea cum, veritatis vero sed voluptatem deserunt!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus id neque debitis tempora vel laborum est. Aut excepturi tempora modi provident quod maiores, ea cum, veritatis vero sed voluptatem deserunt!</p> <br>
+
+    <img src="Screenshot (48).png" alt=""> 
+    <img src="Screenshot (49).png" alt=""> 
+    <img src="Screenshot (50).png" alt="">
+    <img src="image/Screenshot (57).png" alt="">
+    <img src="image/Screenshot (58).png" alt="">
 </body>
 </html>
