--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>My Practice Repo</h1>
+    <h3>New look website</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus id neque debitis tempora vel laborum est. Aut excepturi tempora modi provident quod maiores, ea cum, veritatis vero sed voluptatem deserunt!</p> <br>
 
     <img src="Screenshot (48).png" alt=""> 
